# sentinel-ai-hackathon

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  api.py  build_log.txt  deploy.sh  pyproject.toml  reports.db  run_workflow.py  test_rag.py  test_rag_query.py  test_upload.py  test_video_bytes.py
frontend/: vite.config.js
frontend/.adk/: session.db
frontend/src/: App.jsx  index.css
frontend/src/pages/: AgentDashboard.jsx  CitizenDashboard.jsx
hackathon2026_agent/: __init__.py  agent.py  config.py  legal_analyst.py  traffic_inspector.py
hackathon2026_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hackathon2026_agent/tools/: __init__.py  vertex_search.py
traffic_analysis_app/.adk/: session.db
